--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html>
+<head>
+ <title>IR Remote Control</title>
+ <style>
+   input{
+     display:none;
+   }
+   body{
+     margin:0px;
+     background-color:rgba(235,255,255,1);
+     font-family:verdana;
+   }
+   .header{
+     background-color:rgba(200,235,235,1);
+     width:100vw;
+   }
+   textarea{
+     border-radius:7px;
+     background-color:rgba(230,255,255,1);
+   }
+   .content{
+     margin:5px;
+   }
+ </style>
+ 
+ 
+</head>
 <body>
-
-<h1>Control LED light</h1>
-<p><input type="checkbox" id="light"></p>
-
+<div class="header" width="100%" height="60px">
+<h1>IR Remote</h1>
+</div>
+<div class="content">
+  <p><input type="checkbox" id="light"></p>
+  <textarea id="text" width="200" height="100"> </textarea>
+</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> <!-- include socket.io client side script -->
 <script>
 var socket = io(); //load socket.io-client and connect to the host that serves the page
@@ -18,10 +47,10 @@ socket.on('light', function (data) { //get button status from client
   document.getElementById("light").checked = data; //change checkbox according to push button on Raspberry Pi
   socket.emit("light", data); //send push button status to back to server
 });
-socket.onmessage = function (event) {
- document.getElementById("wind_speed_last").textContent = 'value from 
- event'
-};
+socket.on('txt', function (event) {
+ document.getElementById("text").textContent = event
+ console.log(event);
+});
 </script>
 
 </body>
